--- a/banco_vital.html
+++ b/banco_vital.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banco Vital</title>
+    <title>Vital Bank</title>
 
     <script>
         var saldo = 10000.00; //Float
@@ -147,11 +147,8 @@
                 inicio();
             }
         }
-
         inicio();
     </script>
 </head>
-<body>
-    
-</body>
+<body></body>
 </html>
